--- a/q/275689.html
+++ b/q/275689.html
@@ -26,17 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>142</td><td>Perl 5</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
-<tr d-ix="1"><td>016</td><td>Jelly</td><td>240923T092335Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275715#275715">emanresu</a></td></tr>
-<tr d-ix="2"><td>100</td><td>JavaScript Node.js</td><td>240923T081611Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275711#275711">tsh</a></td></tr>
-<tr d-ix="3"><td>104</td><td>JavaScript ES6</td><td>240922T195155Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275694#275694">Arnauld</a></td></tr>
-<tr d-ix="4"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
-<tr d-ix="5"><td>177</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
-<tr d-ix="6"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
-<tr d-ix="7"><td>033</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
-<tr d-ix="8"><td>104</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
+<tr d-ix="0"><td>114</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
+<tr d-ix="1"><td>142</td><td>Perl 5</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
+<tr d-ix="2"><td>016</td><td>Jelly</td><td>240923T092335Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275715#275715">emanresu</a></td></tr>
+<tr d-ix="3"><td>100</td><td>JavaScript Node.js</td><td>240923T081611Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275711#275711">tsh</a></td></tr>
+<tr d-ix="4"><td>104</td><td>JavaScript ES6</td><td>240922T195155Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275694#275694">Arnauld</a></td></tr>
+<tr d-ix="5"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
+<tr d-ix="6"><td>177</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
+<tr d-ix="7"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
+<tr d-ix="8"><td>033</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 142 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 114 bytes</h1>
+<p>Brute-force solution. Iterates over all numbers in base 3, transliterates each to <code>o</code>/<code>x</code>/space, then if it’s a valid position increments a counter, breaking and returning the count if it’s equal to the input.</p>
+<pre class="lang-ruby prettyprint-override"><code>-&gt;s{i=j=0
+(t=(&quot;%9d&quot;%j.to_s(3)).tr&quot;012&quot;,&quot; xo&quot;
+i+=1if(0..1)===t.count(?x)-t.count(?o)
+j+=1)until s==t
+&quot;%013b&quot;%(i-1)}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=bY5NCsIwEEb3OUUYCCRoQqMbXYzuegkpQpVCihhpEoyIJ3FTRA_lbYzUP9S3mZnHB98cz00od-0px0vwlRxdGzlxe4M1ZoR75MDGS2C18nbu-FAI5RvI9AD6QKMFYnqoTcUzpbRARK8WNqw9n0YhX7sVpE4xkQ6zoi6lCLBMD0tg3EgtDo_m7SZ4R_MZ0CdQkG8Xf138k0u_vV1MwsZIP529ExNQdPVt280b" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h2>Ruby, 104 bytes</h2>
+<p>Returns an integer rather than a binary string.</p>
+<pre class="lang-ruby prettyprint-override"><code>-&gt;s{i=j=0
+(t=(&quot;%9d&quot;%j.to_s(3)).tr&quot;012&quot;,&quot; xo&quot;
+i+=1if(0..1)===t.count(?x)-t.count(?o)
+j+=1)until s==t
+i-1}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3M3TtiqszbbNsDbg0Smw1lFQtU5RUs_RK8uOLNYw1NfVKipQMDI2UdJQUKvKVuDK1bQ0z0zQM9PQMNW1tbUv0kvNL80o07Cs0deHsfE2uLKAyTSAnM0ehGKiKK1PXsBZqX2qBglu0kgIMKMVyoQhUoAlUoKsAugIqUAHk5VdUKMAF8kGgAgiUYiGWLVgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 142 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>sub{local($_,$n)=$&quot;x9;do{(s/x/x/g- s/o/o/g)!~/0|^1/ or$f{$_}=sprintf&quot;%013b&quot;,$n++}while s/([ o])x*$/($1eq$&quot;?o:x).($&quot;x(-1+length$&amp;))/e;$f{+pop}}
 </code></pre>
@@ -50,7 +69,7 @@
 <p><a href="https://tio.run/##rc3RCoIwFMbxVznoGorpcWlkyN4kCqMpAzmTbRcLokdv2VU9QPz54Lv7LcrO@xiZluzSM5J1f0exaxBMQCmPnGcOw9pUgkOzNuXyifXjLJDzomDEOTK9/sVq8mOyqUVzPVGyZQSjsSBUV1Wt6mIK/zKyXySHgW5AKvgv17TqAOk4OK9sBGNC@OxlFq8NuVjS/AY" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>Very slow as it loops from 100 000 000 to 400 000 000 throwing away all numbers thats not all <code>1</code>s, <code>2</code>s and <code>3</code>s. Then translates <code>123</code> into <code> ox</code> accordingly and where the count of <code>x</code>s is the same or one higher than the count of <code>o</code>s the <code>$n</code> is counted one up. When the now translated number equals the input it outputs the 13 digit binary representation of <code>$n</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
 <pre><code>3ṗ9SÞị“o x”iµBḊV
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/44c7plsGH5z3c3f2oYU6@QsWjhrmZh7Y6PdzRFfb//3@lfCBQqAACJQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a> Port of <a href="https://codegolf.stackexchange.com/a/275707/100664">my Vyxal</a>, see that for an explanation of why this works.</p>
@@ -66,7 +85,7 @@
               ḊV # Remove first digit and concatenate
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 100 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 100 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;(i=1e4,g=(p,c)=&gt;p[8]?i+=c&amp;6?0:p&lt;s:[0,7,1].map(n=&gt;g(p+' xo'[n%5],~~c+n))|i)``.toString(2).slice(1)
 </code></pre>
@@ -80,7 +99,7 @@
 <p><a href="https://tio.run/##BcHdCsIgFADgV/Gm9KANu@iH1XEPIsLEtmEsj2SEF7FXt@97@q8v4R3z55DoMbUZW0EjImq1oMgqAJpsr26IEsP@POg@30tvtbqoo@tePouEZhFZclaJ27Q7ObVtQSaAX4RxbIFSoXXqVlrELHhljFGtjDjArf0B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Input string as format <code>'x   oxx o'</code>, output an integer in range <span class="math-container">\$\left[0,6105\right]\$</span>.</p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 104 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES6), 104 bytes</h1>
 <p>Expects a 9-character string made of <code>' '</code>, <code>'O'</code>, <code>'X'</code> and returns a 13-character binary string.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;(g=k=&gt;i--?g(k/b|0)+&quot;01O X&quot;[t-=~-(k%=b),k+6%~b]:t=&quot;&quot;)((F=n=&gt;g(n,i=9)!=s&amp;&amp;!t+!~t+F(-~n))(b=3),i=13,b=2)
@@ -94,7 +113,7 @@
 </code></pre>
 <p><a href="https://tio.run/##jc5BCsIwEAXQvadIA0pCOyoogsLoEboNiItS2xJTEjHBhUiv5d6DGVPFjVbxz/Ixf2aXHTObH@TegTbbwvsSmU00xyWrUOFSAqwqpkaT85jHNCWCrh1gA0z1ccITtVk4pJQznUic8wjtYBC5OGpcXIYeaDT3udHW1MWwNhUrGU1DiAihnPc6TJAf1uJXC/jdBHk3er20Qz82yDNpVxt55YeJvy89/iLhwY621kT6NH8zeyeDewDrslyBlacCp@P57A4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 17 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 17 bytes</h1>
 <pre><code>2ʀ9↔µ∑;«+⅛«İṠḟbṅḢ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIyyoA54oaUwrXiiJE7wqsr4oWbwqvEsOG5oOG4n2LhuYXhuKIiLCIiLCJvb29vIHh4eHgiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -117,7 +136,7 @@
                 Ḣ # And remove the first character
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 177 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 177 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:'0'*(13-len(t:=bin((L:=[t+' '*(9-len(t))for i in range(3**9)if(t:=g(i)[:-1]).count('x')-t.count('o')in(0,1)]).index(s))[2:]))+t
 g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
@@ -136,7 +155,7 @@ g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
     return '0'*(13-len(t1))+t1
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 32 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 32 bytes</h1>
 <pre><code>Ｐ×¹³0⮌⍘⌕ΦＥＸ³χ◧⍘ι xo⁹¬÷⁻№ιx№ιo²Ｓ²
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjeP-JbmlGQWFGXmlWiEZOamFmsYGusoKBkoaWpacwWAhYNSy1KLilM1nBKLU4NLgELpGm6ZeSlAIqcktUjDN7FAIyC_HMgCajQ00NRRCEhM8UlNK0HWkAk0U6EiXwkoa6kJJPzySzQ880pcMssyU1I1fDPzSos1nPNLgbaBVFaA1CG4QG1AvpEmiPTMKygtgRoKE7VeUpyUXAz10fJoJd2yHKXYVRUKCgr5FRUK-VwQCQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation:</p>
@@ -153,21 +172,11 @@ g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
 </code></pre>
 <p>Find the index of the input string and convert that to binary, LSB first.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 33 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 33 bytes</h1>
 <pre><code>(13#2)\&quot;x o&quot;[+b\&amp;~-2!+/1-!b:9#3]?
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLs9IwNFY20oxRqlDIV4rWTopRq9M1UtTWN9RVTLKyVDaOtefiSgNKKijkV4CUgDgVFfn5+UARJQDbAg+n" rel="nofollow noreferrer">Try it online!</a></p>
 <p><code>+b\&amp;~-2!+/1-!b:9#3</code> generates all valid boards using 0 for <code>x</code>, 1 for spaces and 2 for <code>o</code>. <code>&quot;x o&quot;[...]</code> converts the boards to strings, <code>?</code> finds the argument in the list of strings and <code>(13#2)\</code> converts the integer to 13 binary digits.</p>
-</div>
-<div id="pu8" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 104 bytes</h1>
-<p>Brute-force solution. Iterates over all numbers in base 3, transliterates each to <code>o</code>/<code>x</code>/space, then if it’s a valid position increments a counter, breaking and returning the count if it’s equal to the input.</p>
-<pre class="lang-ruby prettyprint-override"><code>-&gt;s{i=j=0
-(t=(&quot;%9d&quot;%j.to_s(3)).tr&quot;012&quot;,&quot; xo&quot;
-i+=1if(0..1)===t.count(?x)-t.count(?o)
-j+=1)until s==t
-i-1}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3M3TtiqszbbNsDbg0Smw1lFQtU5RUs_RK8uOLNYw1NfVKipQMDI2UdJQUKvKVuDK1bQ0z0zQM9PQMNW1tbUv0kvNL80o07Cs0deHsfE2uLKAyTSAnM0ehGKiKK1PXsBZqX2qBglu0kgIMKMVyoQhUoAlUoKsAugIqUAHk5VdUKMAF8kGgAgiUYiGWLVgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 
 <table id="st">
