--- a/q/275590.html
+++ b/q/275590.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>2462</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
+<tr d-ix="0"><td>2412</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
 <tr d-ix="1"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
 <tr d-ix="2"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
 <tr d-ix="3"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
@@ -37,17 +37,20 @@
 <tr d-ix="8"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> 246 bytes x 2</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> 241 bytes x 2</h1>
 <pre class="lang-none prettyprint-override"><code>for z (79be 467b 79be 467b 0247 2469 37ae 59cg){W=
-for i ({0..3})for o (${(s::)z})W+=($[16#${o/g/10}-7+12*i])
-for q (${W:0:-1} ${(Oa)W})S=$S\between(t,$[p++]/7,$p/7)*$[440*2**(($q-21)/12.)]+
+for i ({0..3})for o (${(s::)z})W+=($[440*2**((16#${o/g/10}-28+12*i)/12.)])
+for q (${W:0:-1} ${(Oa)W})S=$S\between(t,$[p++]/7,$p/7)*$q+
 };ffplay -f lavfi aevalsrc=&quot;'0.1*sin(2*PI*t*(${S%+}))'&quot;
 </code></pre>
-<p><a href="https://tio.run/##RY9BboMwFET3OcVX6ir@dgDboVhQcYCuWikLFpSFQSZBQoEElKogn52GdtHdPGmeRjMN58W0jRmgrvvWfKe2OndL3d1gAqrj0kIY6RL@k1ChBhVGMRy0sfASVyecs3SzKg3QWfj@weFKHVAy0yFJcHKY8ZSSXEZPZO6CUyCF8zSXijUF/qrXtZwlIvGkg4f2bjBzeEzJ8bO045e1FzruSd5zXgR6T/pAIyN5GAqmGKOUXD0lMZDKx4Jv3OvfGfBqaM29bsDYu2mHW5Vud8KXbGguVLGPNzayx@zxmTvE3XZZfgA" rel="nofollow noreferrer">Try it online!</a>
+<p><a href="https://tio.run/##RY@xboMwFEX3fMVT6ip@dgDbobhQ8QGdWomBIc1gkEmQUCABpSrI305DM3S7dzjn6o79aTZNbXqoqq4xP6ktT@1ctVcYgeq4sBBGuoD/JFSoQYVRDDttLLzE5RGnPF0tSA10Er6/c7i0FiiZaJ8kODrMeUrJPgwFU4xRKqMnMrXBMZDCeeqVS8VqDKTy8YB/qssC54lIPOngrvkwmDvMUpJ9FXb4tvZMhy3Zd5wfAr0lXaCRkQtfubfHD/AqaMytqsHYm2n6a5muN8KXrK/PVLHPdzaw@0L2zB3iZj3Pvw" rel="nofollow noreferrer">Try it online!</a>
 <sub><s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></s></sub></p>
 <p><code>for z</code> grabs 4 pseudo-hex characters<br>
-<code>for i</code> and <code>for o</code> populate array <code>W</code> with 16 notes based on <code>z</code><br>
-<code>for q</code> iterates up and down <code>W</code> turning each note <code>q</code> into a frequency <code>f=$[440*2**(($q-21)/12.)]</code> (Hz). This in turn is used to build string <code>S</code> which is later passed to <code>ffplay</code>.</p>
+<code>for i</code> and <code>for o</code> populate array <code>W</code> with 16 notes based on <code>z</code>; expressed as<br>
+  note number: <code>n=$[16#${o/g/10}-7+12*i]</code>, combined with<br>
+  frequency (Hz): <code>f=$[440*2**(($n-21)/12.)]</code> <br>
+<code>for q</code> goes up &amp; down <code>W</code> adding time increments <code>p/7</code> and frequency <code>q</code> to string <code>S</code><br>
+Finally, we call <code>ffplay</code> using the string <code>S</code> (trailing <code>+</code> truncated)</p>
 <p>The linked TIO example doesn't play sound (no <code>ffplay</code>), but you can see the humungous string <code>S</code></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript, 324 bytes</h1>
