--- a/q/275590.html
+++ b/q/275590.html
@@ -39,12 +39,13 @@
 </table>
 <div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> 241 bytes x 2</h1>
 <pre class="lang-none prettyprint-override"><code>for z (79be 467b 79be 467b 0247 2469 37ae 59cg){W=
-for i ({0..3})for o (${(s::)z})W+=($[440*2**((16#${o/g/10}-28+12*i)/12.)])
-for q (${W:0:-1} ${(Oa)W})S=$S\between(t,$[p++]/7,$p/7)*$q+
+for i ({0..3})for o (${(s::)z})W+=($[750*2**((16#${o/g/10}-28+12*i)/12.)])
+for q (${W:0:-1} ${(Oa)W})S=$S\between(t,$[p++]/5,$p/5)*$q+
 };ffplay -f lavfi aevalsrc=&quot;'0.1*sin(2*PI*t*(${S%+}))'&quot;
 </code></pre>
-<p><a href="https://tio.run/##RY@xboMwFEX3fMVT6ip@dgDbobhQ8QGdWomBIc1gkEmQUCABpSrI305DM3S7dzjn6o79aTZNbXqoqq4xP6ktT@1ctVcYgeq4sBBGuoD/JFSoQYVRDDttLLzE5RGnPF0tSA10Er6/c7i0FiiZaJ8kODrMeUrJPgwFU4xRKqMnMrXBMZDCeeqVS8VqDKTy8YB/qssC54lIPOngrvkwmDvMUpJ9FXb4tvZMhy3Zd5wfAr0lXaCRkQtfubfHD/AqaMytqsHYm2n6a5muN8KXrK/PVLHPdzaw@0L2zB3iZj3Pvw" rel="nofollow noreferrer">Try it online!</a>
-<sub><s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></s></sub></p>
+<p><a href="https://tio.run/##RY@9boMwFIX3PMVV6iq@dgDb4SdQ8QCdWomBIc1gkEmQUCABJSrIz05DO3Q7Z/i@ozP251k3te6hqrpGf6emPLdz1d5gBBrFhQE/jAr4T0L5ESg/jGEXaQNBXJ5wytPVgtRAJ@G6O4tLa4GSifZJgqPFnKeUHKJAMMUYpTJ8IVPrnTwprKP2XCpWoyeVi0f8VV0XOE9E4kgLT82HxtxilpLsqzDDw5gLHbbk0HF@9IIt6bwAGbnylX37@wFOBY2@VzVoc9dNfyvT9Ua4kvX1hSr2@c4G9lzIXrlF3Kzn@Qc" rel="nofollow noreferrer">Try it online!</a> <sub>adjusted by ear; frequencies from <code>ffplay</code> seemed a bit off</sub>
+<br><a href="https://tio.run/##RVBNj4IwEL37KyZsDW2Rj1aUgOEH7Gk38cDBNbGQVkkIIBA3K@lvZ4uaeJhk5r03M2/m3l8mUZWiB6XaSvylsrg0k2o6uAOO4lxCuI1yeGcBDyPg4TaGdSQkbOLiTMYsXQDMTSXgMfC8tSZz1QBGI@6ThNw1GY0EoE7RgW0/0Nj4Z58F2o0cxml5fJDKkGEYUE4pxqh2OSM@4x55spmT4lPblfWgwFp6TFmA1Ik8uBeM6h@wbYNoE/MlL1vX2UiWBInLNBhLX4JkmuxTC@2NIpfDr5Q1Hlbo0DrO0d@sUOtvCEVXx9q9JgHKFnr3fBK4CipxUyUIeRNV3xWpZQceo31ZY06/P@lAzcL90tGE2NY0/QM" rel="nofollow noreferrer">Debug version</a> <sub>produces expected note-numbers &amp; frequencies</sub>
+<br><sub><s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></s></sub></p>
 <p><code>for z</code> grabs 4 pseudo-hex characters<br>
 <code>for i</code> and <code>for o</code> populate array <code>W</code> with 16 notes based on <code>z</code>; expressed as<br>
   note number: <code>n=$[16#${o/g/10}-7+12*i]</code>, combined with<br>
